# dash

./: .gitignore  .gitmodules  .travis.yml  CMakeCache.txt  CMakeLists.txt  InfinitiG37  Makefile  README.md  brightness.sh  cmake_install.cmake  desktop.sh  flake.nix  install.sh  installDash.sh  openauto.ini  rpi.sh
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: build-with-script.yaml  build.yml
InfinitiG37_autogen/: moc_predefs.h  mocs_compilation.cpp
InfinitiG37_autogen/E6YXTI5TER/: moc_color_label.cpp  moc_dialog.cpp  moc_ip_input.cpp  moc_progress.cpp  moc_switch.cpp  moc_tuner.cpp
InfinitiG37_autogen/HKLXOWL4SC/: moc_brightness.cpp
InfinitiG37_autogen/KTF6LCBHT5/: moc_bluetooth.cpp  moc_config.cpp  moc_shortcuts.cpp  moc_theme.cpp  moc_window.cpp
InfinitiG37_autogen/NPUSVZUEE2/: moc_camera.cpp  moc_data.cpp  moc_launcher.cpp  moc_media.cpp  moc_openauto.cpp  moc_settings.cpp
InfinitiG37_autogen/WETUBSRGIL/: moc_infiniti_g37.cpp
InfinitiG37_autogen/YZ7GUGIMTZ/: moc_socketcanbus.cpp
assets/: aa_video.qml  camera_video.qml  logo.ai  resources.qrc
assets/icons/: opendash.xpm
assets/stylesheets/: dark.qss  light.qss
cmake_modules/: FindTaglib.cmake  Findaasdk.cmake  Findlibusb-1.0.cmake  Findopenauto.cmake  Findrtaudio.cmake  Findtaglib.cmake  functions.cmake  gitversion.cmake
dash/: .gitignore  CMakeLists.txt
dash/assets/: dark.qss  light.qss  resources.qrc
dash/assets/stylesheets/: dark.qss  light.qss
dash/include/app/: bluetooth.hpp  config.hpp  progress.hpp  switch.hpp  tabs.hpp  theme.hpp  tuner.hpp  window.hpp
dash/include/obd/: command.hpp  conversions.hpp  decoders.hpp  message.hpp  obd.hpp
dash/src/: dash.cpp
dash/src/app/: bluetooth.cpp  config.cpp  progress.cpp  switch.cpp  tabs.cpp  theme.cpp  tuner.cpp  window.cpp
dash/src/obd/: command.cpp  conversions.cpp  obd.cpp
ia_autogen/: moc_predefs.h  mocs_compilation.cpp
ia_autogen/E6YXTI5TER/: moc_color_label.cpp  moc_dialog.cpp  moc_ip_input.cpp  moc_progress.cpp  moc_switch.cpp  moc_tuner.cpp
ia_autogen/GBFAFXFCVO/: qrc_resources.cpp
ia_autogen/HKLXOWL4SC/: moc_brightness.cpp
ia_autogen/KTF6LCBHT5/: moc_bluetooth.cpp  moc_config.cpp  moc_shortcuts.cpp  moc_theme.cpp  moc_window.cpp
ia_autogen/NPUSVZUEE2/: moc_camera.cpp  moc_data.cpp  moc_launcher.cpp  moc_media.cpp  moc_openauto.cpp  moc_settings.cpp
ia_autogen/YZ7GUGIMTZ/: moc_socketcanbus.cpp
include/: AAHandler.hpp  AAInterface.hpp  DashLog.hpp
include/app/: action.hpp  arbiter.hpp  bluetooth.hpp  config.hpp  session.hpp  shortcuts.hpp  theme.hpp  window.hpp
include/app/graphics/: dynamic_svg.hpp
include/app/modules/: brightness.hpp
include/app/pages/: camera.hpp  launcher.hpp  media.hpp  openauto.hpp  page.hpp  settings.hpp  vehicle.hpp
include/app/quick_views/: combo.hpp  media.hpp  quick_view.hpp
include/app/services/: bluetooth.hpp  clock.hpp  server.hpp
include/app/tabs/: camera.hpp  climate.hpp  data.hpp  launcher.hpp  media.hpp  open_auto.hpp  openauto.hpp  settings.hpp
include/app/utilities/: icon_engine.hpp
include/app/widgets/: climate.hpp  climate_state.hpp  color_label.hpp  color_picker.hpp  dialog.hpp  fullscreen_toggle.hpp  fullscreen_toggler.hpp  ip_input.hpp  obd.hpp  progress.hpp  selector.hpp  sliders.hpp  step_meter.hpp  switch.hpp  tuner.hpp  vehicle.hpp  vehicle_state.hpp
include/canbus/: ICANBus.hpp  elm327.hpp  moc_vehicleinterface.cpp_parameters  socketcanbus.hpp  vehicleinterface.hpp
include/obd/: command.hpp  conversions.hpp  decoders.hpp  message.hpp  obd.hpp
include/plugins/: brightness_plugin.cpp  brightness_plugin.hpp  launcher_plugin.hpp  plugin.cpp  plugin.hpp  radio_plugin.hpp  radio_tuner_plugin.hpp  vehicle_plugin.hpp
nix/: overlays.nix
nix/pkgs/: default.nix
nix/pkgs/aasdk/: default.nix
nix/pkgs/dash/: default.nix
nix/pkgs/h264bitstream/: default.nix
nix/pkgs/openauto/: default.nix
nix/pkgs/qtgstreamer/: default.nix
patches/: aasdk_openssl-fips-fix.patch  greenline_fix.patch  h264bitstream_path_patch_fixup.patch  openauto_find-h264bitstream.patch  openauto_rpath-for-nix.patch  qt-gstreamer_pc_path.patch
plugins/: CMakeLists.txt  README.md  infiniti_g37.cpp  infiniti_g37.hpp  infiniti_g37.json
plugins/InfinitiG37/: infiniti_g37.cpp  infiniti_g37.hpp
plugins/brightness/mocked/: mocked.cpp  mocked.hpp  mocked.json
plugins/brightness/official_rpi/: official_rpi.cpp  official_rpi.hpp  official_rpi.json
plugins/brightness/x/: x.cpp  x.hpp
plugins/launcher/app/: app.cpp  app.hpp  app.json
plugins/launcher/home/: Entry.ui  app.cpp  app.hpp  home.cpp  home.hpp  home.json  util.hpp  window_manager.cpp  window_manager.hpp
plugins/radio/rtl_sdr/: rtl_sdr.cpp  rtl_sdr.hpp  rtl_sdr.json
plugins/radio_tuner/rtl_sdr/: rtl_sdr.cpp  rtl_sdr.hpp  rtl_sdr.json
plugins/test/: test.cpp  test.hpp  test.json
plugins/vehicle/: README.md
plugins/vehicle/InfinitiG37/: infiniti_g37.cpp  infiniti_g37.hpp
plugins/vehicle/obd2/: README.md  obd2.cpp  obd2.hpp
plugins/vehicle/test/: test.cpp  test.hpp  test.json
src/: dash.cpp  gitversion.h.in  ia.cpp
src/app/: AAHandler.cpp  AAInterface.cpp  action.cpp  arbiter.cpp  bluetooth.cpp  config.cpp  session.cpp  shortcuts.cpp  theme.cpp  window.cpp
src/app/graphics/: dynamic_svg.cpp
src/app/modules/: brightness.cpp
src/app/pages/: camera.cpp  data.cpp  launcher.cpp  media.cpp  openauto.cpp  page.cpp  settings.cpp  vehicle.cpp
src/app/quick_views/: combo.cpp  media.cpp  quick_view.cpp
src/app/services/: bluetooth.cpp  clock.cpp  server.cpp
src/app/tabs/: camera.cpp  climate.cpp  data.cpp  launcher.cpp  media.cpp  open_auto.cpp  openauto.cpp  settings.cpp
src/app/utilities/: icon_engine.cpp
src/app/widgets/: climate.cpp  climate_state.cpp  color_label.cpp  color_picker.cpp  dialog.cpp  fullscreen_toggle.cpp  fullscreen_toggler.cpp  ip_input.cpp  obd.cpp  progress.cpp  selector.cpp  sliders.cpp  step_meter.cpp  switch.cpp  (+3 more)
src/bash/: autostartdaemon.sh  brightness.sh  desktop.sh
src/canbus/: elm327.cpp  socketcanbus.cpp
src/obd/: command.cpp  obd.cpp
(+11 files in other folders)
